# fastapi-postgis-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
database/: Dockerfile  init.sh
project/: .dockerignore  Dockerfile  requirements.txt
project/app/: config.py  db.py  main.py
project/app/api/: ping.py
